add endpoints for retriving all users or one user by user_id
